--- a/MiiCloner/MiiCloner.csproj
+++ b/MiiCloner/MiiCloner.csproj
@@ -70,6 +70,12 @@
     <Compile Include="AboutForm.Designer.cs">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="FileFormatForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FileFormatForm.Designer.cs">
+      <DependentUpon>FileFormatForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Mii.cs" />
     <Compile Include="MiiEditorForm.cs">
       <SubType>Form</SubType>
@@ -89,6 +95,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AboutForm.resx">
       <DependentUpon>AboutForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FileFormatForm.resx">
+      <DependentUpon>FileFormatForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MiiEditorForm.resx">
       <DependentUpon>MiiEditorForm.cs</DependentUpon>
